--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <ul>
         <li>Item 1</li>
         <li>Item 2</li>
-        <li>Item 3</li>
+        <li>Item 3ssc</li>
     </ul>
 </section>
 
