--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <li>Item 1</li>
         <li>Item 2</li>
         <li>Item 3ssc</li>
+        <li>4 Person Group (Git Session)</li>
     </ul>
 </section>
 
