--- a/index.html
+++ b/index.html
@@ -1,54 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sample HTML Page</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
+      body {
+        font-family: Arial, sans-serif;
+        margin: 20px;
+      }
 
-        header {
-            background-color: #f2f2f2;
-            padding: 10px;
-            text-align: center;
-        }
+      header {
+        background-color: #f2f2f2;
+        padding: 10px;
+        text-align: center;
+      }
 
-        section {
-            margin-top: 20px;
-        }
+      section {
+        margin-top: 20px;
+      }
 
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
+      ul {
+        list-style-type: none;
+        padding: 0;
+      }
 
-        li {
-            margin-bottom: 8px;
-        }
+      li {
+        margin-bottom: 8px;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
+    <header>
+      <h1>Sample HTML Page</h1>
+    </header>
 
-<header>
-    <h1>Sample HTML Page</h1>
-</header>
+    <section>
+      <p>This is a simple HTML page with a header, a paragraph, and a list.</p>
 
-<section>
-    <p>This is a simple HTML page with a header, a paragraph, and a list.</p>
-
-    <h2>Sample List</h2>
-    <ul>
+      <h2>Sample List</h2>
+      <ul>
         <li>Item 1</li>
         <li>Item 2</li>
         <li>Item 3ssc</li>
-    </ul>
-</section>
-
-</body>
-
+        <li>Item temp</li>
+      </ul>
+    </section>
+  </body>
 </html>
